Update and rename 打怪跑酷 (1) (1).html to index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Sky Run — 2D 平台跑酷（双人/单人）</title>
+<title>Sky Run — 2D 平台跑酷（双人/单人）， by: Guqi(Gui Gui)</title>
 <style>
   :root{--bg:#87CEEB;--ground:#6b4f2b;--accent:#ffcc00}
   html,body{height:100%;margin:0;font-family:Inter,Segoe UI,Roboto,Arial;background:var(--bg)}
